fix event word wrap bug and styles event index + show

--- a/app/assets/stylesheets/common/_buttons.css.scss
+++ b/app/assets/stylesheets/common/_buttons.css.scss
@@ -38,3 +38,11 @@ button {
     text-shadow: none;
   }
 }
+
+.margin-below {
+  margin-bottom: 34px;
+}
+
+.margin-above {
+  margin-top: 34px;
+}
