--- a/app/assets/stylesheets/partials/_application.css.scss
+++ b/app/assets/stylesheets/partials/_application.css.scss
@@ -31,7 +31,7 @@ body {
     height: 100%;
     width: 2000px;
     bottom: 0;
-    overflow-y: hidden;
+    overflow-y: scroll;
   }
 
   .sub-menu {
