--- a/app/assets/stylesheets/views/events/events.css.scss
+++ b/app/assets/stylesheets/views/events/events.css.scss
@@ -1,12 +1,25 @@
 .events-list {
-  @include horizontal-list;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  overflow: hidden;
   margin-top: 90px;
   margin-left: 90px;
+
+  li :first-child, .events-list li.first {
+    padding-left: 0;
+  }
 
   li {
     width: 220px;
     margin-right: 90px;
     word-wrap: normal;
+    list-style-type: none;
+    list-style-image: none;
+    margin-left: 0;
+    display: inline;
+    float: left;
+    padding-right: 4px;
 
     .event {
       position: relative;
@@ -18,6 +31,34 @@
         font-size: 5em;
         color: white;
       }
+    }
+  }
+}
+
+.vertical-wrapper {
+
+  .event {
+    margin: 0 70px 35px;
+
+    .image {
+      float: left;
+      margin-right: 35px;
+      margin-bottom: 30px;
+    }
+
+    span.date {
+      font-size: 60px;
+      color: #f8f8f8;
+    }
+
+    h2 {
+      line-height: 1.3em;
+      margin-top: 10px;
+    }
+
+    .details {
+      float:left;
+      width: 70%
     }
   }
 }
